chapter-2/exercise-1.7/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-app
  template:
    metadata:
      labels:
        app: log-app
    spec:
      containers:
        - name: log-app
          image: ismayilkarimli/devops-with-kubernetes:1.7
          imagePullPolicy: Always
