chapter-2/exercise-1.7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-app-svc
spec:
  type: ClusterIP
  selector:
    app: log-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8081
